Added API documentation for Lucene.Net 1.4.3
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@395592 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -67,10 +67,8 @@
         </p>
         <h2>Documentation</h2>
         <p>
-            The project currently has no documentaton released available, but since 
-            Lucene.Net is API and class port based on Java Lucene to C# Lucene, the Java 
-            Lucene <a href="http://lucene.apache.org/java/docs/api/index.html">documentation</a>
-            applies and can be used.
+            There is an MSDN tyle <a href="http://incubator.apache.org/lucene.net/docs/1.4.3/api/">API documentation</a> 
+            generated via <a href="http://ndoc.sourceforge.net/">NDoc</a> tool.
         </p>
         <h2>Development</h2>
         <p>
