Added API documentation for Lucene.Net 1.4.3
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@395594 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -67,7 +67,7 @@
         </p>
         <h2>Documentation</h2>
         <p>
-            There is an MSDN tyle <a href="http://incubator.apache.org/lucene.net/docs/1.4.3/api/">API documentation</a> 
+            There is an MSDN style <a href="http://incubator.apache.org/lucene.net/docs/1.4.3/api/">API documentation</a> 
             generated via <a href="http://ndoc.sourceforge.net/">NDoc</a> tool.
         </p>
         <h2>Development</h2>
