--- a/site/index.html
+++ b/site/index.html
@@ -50,11 +50,16 @@
         <h2>News</h2>
         <ul>
             <li>
+            20 April 2006 - Added MSDN style Lucene.Net API documentation.
+            </li>
+            <li>
             13 April 2006 - The project has moved into the Apache incubator and is now open 
             for the public, a necessary step towards becoming part of the Lucene Project.
+            </li>
             <li>
                 13 April 2006 - Lucene.Net is also refered to as <em>DotLucene</em>, <em>dotLucene</em>, 
                 and <em>Lucene.NET</em>. The project's offical name is <b><em>Lucene.Net</em></b>.
+            </li>
             <li>
                 13 April 2006 - Lucene.Net is still avilable at it's old home on <a href="http://sourceforge.net/projects/dotlucene/">
                     SourceForge.Net</a> but will no longer be maintainged at SourcdeForge.Net.
