Lucene.Net web site at: /www/incubator.apache.org/lucene.net
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@395871 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -57,17 +57,17 @@
             for the public, a necessary step towards becoming part of the Lucene Project.
             </li>
             <li>
-                13 April 2006 - Lucene.Net is also refered to as <em>DotLucene</em>, <em>dotLucene</em>, 
-                and <em>Lucene.NET</em>. The project's offical name is <b><em>Lucene.Net</em></b>.
+                13 April 2006 - Lucene.Net is also referred to as <em>DotLucene</em>, <em>dotLucene</em>, 
+                and <em>Lucene.NET</em>. The project's official name is <b><em>Lucene.Net</em></b>.
             </li>
             <li>
-                13 April 2006 - Lucene.Net is still avilable at it's old home on <a href="http://sourceforge.net/projects/dotlucene/">
-                    SourceForge.Net</a> but will no longer be maintainged at SourcdeForge.Net.
+                13 April 2006 - Lucene.Net is still available at its old home on <a href="http://sourceforge.net/projects/dotlucene/">
+                    SourceForge.Net</a> but will no longer be maintained at SourcdeForge.Net.
             </li>
         </ul>
         <h2>Downloads</h2>
         <p>
-            A source code rlease of the project is now under SVN and can be accessed here: <a href="https://svn.apache.org/repos/asf/incubator/lucene.net/">
+            A source code release of the project is now under SVN and can be accessed here: <a href="https://svn.apache.org/repos/asf/incubator/lucene.net/">
                 Lucene.Net source</a>.
         </p>
         <h2>Documentation</h2>
@@ -117,7 +117,7 @@
         <p>
             Lucene.Net uses the ASF Jira installation for issue tracking. You can view open 
             issues, create new ones, and see what issues we've fixed via the web interface 
-            at <a href="http://issues.apache.org/jira/browse/LUCENENET/">http://issues.apache.org/jira/browse/LUCENENET/</a>.
+            at <a href="http://issues.apache.org/jira/browse/LUCENENET">http://issues.apache.org/jira/browse/LUCENENET</a>.
         </p>
         <p>
             Note that to create a new issue or comment on an existing one you'll have to <a href="http://issues.apache.org/jira/secure/Signup!default.jspa">
