--- a/site/index.html
+++ b/site/index.html
@@ -50,6 +50,9 @@
         <h2>News</h2>
         <ul>
             <li>
+            03 June 2006 - Released Lucene.Net 1.9 RC1 build 003 on SVN.
+            </li>
+            <li>
             20 April 2006 - Added MSDN style Lucene.Net API documentation.
             </li>
             <li>
@@ -69,6 +72,10 @@
         <p>
             A source code release of the project is now under SVN and can be accessed here: <a href="https://svn.apache.org/repos/asf/incubator/lucene.net/">
                 Lucene.Net source</a>.
+        </p>
+        <p>
+            SVN is the development release.  A stable ZIP'ed release can be found 
+            <a href="http://incubator.apache.org/lucene.net/download/">here</a>.
         </p>
         <h2>Documentation</h2>
         <p>
