--- a/site/index.html
+++ b/site/index.html
@@ -50,6 +50,12 @@
         <h2>News</h2>
         <ul>
             <li>
+            09 July 2006 - Released Lucene.Net 1.9 "final" build 005 on SVN.
+            </li>
+            <li>
+            13 June 2006 - Released Lucene.Net 1.9 RC1 build 004 on SVN.
+            </li>
+            <li>
             03 June 2006 - Released Lucene.Net 1.9 RC1 build 003 on SVN.
             </li>
             <li>
