--- a/site/index.html
+++ b/site/index.html
@@ -50,20 +50,20 @@
         <h2>News</h2>
         <ul>
             <li>
-            09 July 2006 - Released Lucene.Net 1.9 "final" build 005 on SVN.
+                09 July 2006 - Released Lucene.Net 1.9 "final" build 005 on SVN.
             </li>
             <li>
-            13 June 2006 - Released Lucene.Net 1.9 RC1 build 004 on SVN.
+                13 June 2006 - Released Lucene.Net 1.9 RC1 build 004 on SVN.
             </li>
             <li>
-            03 June 2006 - Released Lucene.Net 1.9 RC1 build 003 on SVN.
+                03 June 2006 - Released Lucene.Net 1.9 RC1 build 003 on SVN.
             </li>
             <li>
-            20 April 2006 - Added MSDN style Lucene.Net API documentation.
+                20 April 2006 - Added MSDN style Lucene.Net API documentation.
             </li>
             <li>
-            13 April 2006 - The project has moved into the Apache incubator and is now open 
-            for the public, a necessary step towards becoming part of the Lucene Project.
+                13 April 2006 - The project has moved into the Apache incubator and is now open 
+                for the public, a necessary step towards becoming part of the Lucene Project.
             </li>
             <li>
                 13 April 2006 - Lucene.Net is also referred to as <em>DotLucene</em>, <em>dotLucene</em>, 
@@ -80,13 +80,14 @@
                 Lucene.Net source</a>.
         </p>
         <p>
-            SVN is the development release.  A stable ZIP'ed release can be found 
-            <a href="http://incubator.apache.org/lucene.net/download/">here</a>.
+            SVN is the development release. A stable ZIP'ed release can be found <a href="http://incubator.apache.org/lucene.net/download/">
+                here</a>.
         </p>
         <h2>Documentation</h2>
         <p>
-            There is an MSDN style <a href="http://incubator.apache.org/lucene.net/docs/1.4.3/api/">API documentation</a> 
-            generated via <a href="http://ndoc.sourceforge.net/">NDoc</a> tool.
+            There is an MSDN style <a href="http://incubator.apache.org/lucene.net/docs/">API 
+                documentation</a> generated via <a href="http://ndoc.sourceforge.net/">NDoc</a>
+            tool.
         </p>
         <h2>Development</h2>
         <p>
