Lucene.Net 1.9.1 build 001
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@421759 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -50,6 +50,9 @@
         <h2>News</h2>
         <ul>
             <li>
+                13 July 2006 - Released Lucene.Net 1.9.1 "beta" build 001 on SVN.
+            </li>
+            <li>
                 09 July 2006 - Released Lucene.Net 1.9 "final" build 005 on SVN.
             </li>
             <li>
