Lucene.Net 2.0 "Alpha"
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@436780 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -50,6 +50,9 @@
         <h2>News</h2>
         <ul>
             <li>
+                17 August 2006 - Released Lucene.Net 2.0 "alpha" build 001 on SVN.
+            </li>
+            <li>
                 13 July 2006 - Released Lucene.Net 1.9.1 "beta" build 001 on SVN.
             </li>
             <li>
