Added Lucene.Net GIF image.
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@440213 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -11,10 +11,11 @@
             <a href="http://incubator.apache.org/"><img border="none" src="images/apache-incubator-logo.png">
             </a>
         </div>
-        <h1>Lucene.Net</h1>
-        <br>
+        <img border="none" src="images/lucene_net_green_460.GIF">
+        <!-- <h1>Lucene.Net</h1> -->
+        <br><br><br>
         <p>
-            Lucene.Net is a source code, class-per-class, API-per-API and algorithmatic 
+            <b>Lucene.Net</b> is a source code, class-per-class, API-per-API and algorithmatic 
             port of the Java <a href="http://lucene.apache.org/java/">Lucene</a> search 
             engine to the C# and .NET platform utilizing <A href="http://msdn.microsoft.com/netframework/">
                 Microsoft .NET Framework.</A>
