--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,12 @@
         <h2>News</h2>
         <ul>
             <li>
+                27 November 2006 - Re-released Lucene.Net 2.0 "beta" build 002 on SVN and as ZIP.
+            </li>
+            <li>
+                27 November 2006 - Re-released Lucene.Net 1.9.1 "final" build 004 on SVN and as ZIP.
+            </li>
+            <li>
                 11 October 2006 - Re-released Lucene.Net 1.9.1 "final" build 003 on SVN and as ZIP.
             </li>
             <li>
