Updated for Highglihter.Net 2.0 release.
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@490546 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -57,6 +57,9 @@
                 27 December 2006 - Released MSDN style Lucene.Net API documentation.
             </li>
             <li>
+                27 December 2006 - Released Highlighter.Net 2.0 "alpha" build 000 on SVN.
+            </li>
+            <li>
                 27 November 2006 - Released Lucene.Net 2.0 "beta" build 002 on SVN and as ZIP.
             </li>
             <li>
