--- a/site/index.html
+++ b/site/index.html
@@ -137,18 +137,18 @@
         <h3>Mailing Lists</h3>
         <p>
             For development, discussion about the project occurs on its mailing list, <a href="mailto:lucene-net-dev @ incubator.apache.org">
-                lucene-net-dev @ lucene.apache.org</a>, to subscribe, send a message to <a href="mailto:lucene-net-dev-subscribe @ incubator.apache.org">
+                lucene-net-dev @ incubator.apache.org</a>, to subscribe, send a message to <a href="mailto:lucene-net-dev-subscribe @ incubator.apache.org">
                 lucene-net-dev-subscribe @ incubator.apache.org</a>.
         </p>
         <p>
             For general usage, discussion about the project occurs on its mailing list, <a href="mailto:lucene-net-user @ incubator.apache.org">
-                lucene-net-user @ lucene.apache.org</a>, to subscribe, send a message to <a href="mailto:lucene-net-user-subscribe at incubator.apache.org">
+                lucene-net-user @ incubator.apache.org</a>, to subscribe, send a message to <a href="mailto:lucene-net-user-subscribe at incubator.apache.org">
                 lucene-net-user-subscribe @ incubator.apache.org</a>.
         </p>
         <p>
             Commit notifications are sent to <a href="mailto:lucene-net-commits @ incubator.apache.org">
-                lucene-net-commits @ lucene.apache.org</a>, to subscribe send a message to <a href="mailto:lucene-net-commits-subscribe at incubator.apache.org">
-                lucene-net-commits-subscribe @ lucene.apache.org</a>.
+                lucene-net-commits @ incubator.apache.org</a>, to subscribe send a message to <a href="mailto:lucene-net-commits-subscribe at incubator.apache.org">
+                lucene-net-commits-subscribe @ incubator.apache.org</a>.
         </p>
         <p>
             Archives of the lists are available at:
