--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,9 @@
         <h2>News</h2>
         <ul>
             <li>
+                07 January 2007 - Released Highlighter.Net 2.0 "final" build 001 on SVN and as ZIP.
+            </li>
+            <li>
                 27 December 2006 - Released Lucene.Net 2.0 "final" build 003 on SVN and as ZIP.
             </li>
             <li>
