MSDN style documentation release of Highlighter.Net.2.0 build 001 "final".
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@493949 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -51,13 +51,16 @@
         <h2>News</h2>
         <ul>
             <li>
+                07 January 2007 - Released MSDN style Highlighter.Net 2.0 API documentation.
+            </li>
+            <li>
                 07 January 2007 - Released Highlighter.Net 2.0 "final" build 001 on SVN and as ZIP.
             </li>
             <li>
                 27 December 2006 - Released Lucene.Net 2.0 "final" build 003 on SVN and as ZIP.
             </li>
             <li>
-                27 December 2006 - Released MSDN style Lucene.Net API documentation.
+                27 December 2006 - Released MSDN style Lucene.Net 2.0 API documentation.
             </li>
             <li>
                 27 December 2006 - Released Highlighter.Net 2.0 "alpha" build 000 on SVN.
@@ -96,7 +99,7 @@
                 03 June 2006 - Released Lucene.Net 1.9 RC1 build 003 on SVN and as ZIP.
             </li>
             <li>
-                20 April 2006 - Added MSDN style Lucene.Net API documentation.
+                20 April 2006 - Added MSDN style Lucene.Net API 1.9 API documentation.
             </li>
             <li>
                 13 April 2006 - The project has moved into the Apache incubator and is now open 
