--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,9 @@
         <h2>News</h2>
         <ul>
             <li>
+                08 January 2007 - Released Snowball.Net 2.0.0 "final" build 001 on SVN and as ZIP.
+            </li>
+            <li>
                 07 January 2007 - Released MSDN style Highlighter.Net 2.0 API documentation.
             </li>
             <li>
