WordNet.Net 2.0.0 build 001 release
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@502459 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,9 @@
         <h2>News</h2>
         <ul>
             <li>
+                01 Feburary 2007 - Released WordNet.Net 2.0.0 build 001 on SVN and as ZIP.
+            </li>
+            <li>
                 29 January 2007 - Released SpellChecker.Net 2.0.0 build 001 on SVN and as ZIP.
             </li>
             <li>
