Added "Active Committers" section.
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@504877 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -143,6 +143,10 @@
             The Lucene.Net project always welcomes new contributors. The project operates 
             via its version control system, mailing lists, and issue tracker.
         </p>
+        <h3>Active Committers</h3>
+        <p>
+            George Aroush <a href="mailto:george @ aroush.net">george @ aroush.net</a>
+        </p>
         <h3>Version Control</h3>
         <p>
             Grab the current development version of Lucene.Net from its Subversion 
