--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,9 @@
         <h2>News</h2>
         <ul>
             <li>
+                23 April 2007 - Released Lucene.Net 2.0 "final" build 004 on SVN and as ZIP.
+            </li>
+            <li>
                 01 Feburary 2007 - Released WordNet.Net 2.0.0 build 001 on SVN and as ZIP.
             </li>
             <li>
