Update "News" section.
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@728222 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,12 @@
         <h2>News</h2>
         <ul>
             <li>
+                13 November 2008 - Accepted, Isik Yigit (aka: "DIGY") and Doug Sale as new committers.
+            </li>
+            <li>
+                10 December 2007 - "Tag" Released Lucene.Net 2.1 "final" build 003 on SVN.
+            </li>
+            <li>
                 23 April 2007 - Released Lucene.Net 2.0 "final" build 004 on SVN and as ZIP.
             </li>
             <li>
