Index.html modified.
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@728899 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,7 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Lucene.Net</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF8">
         <style type="text/css"> body { background: white; margin: 0.5in; font-family: arial,helvetica,sans-serif; }
 	.notice { border-color: black; border: 2px solid; margin: 0.25in; padding: 0.1in; }
 	.logo { float: right; }
@@ -154,7 +155,8 @@
         </p>
         <h3>Active Committers</h3>
         <p>
-            George Aroush <a href="mailto:george @ aroush.net">george @ aroush.net</a>
+            George Aroush <a href="mailto:george @ aroush.net">george @ aroush.net</a> <br>
+	    Işık YİĞİT (DIGY) <a href="mailto:digydigy @ gmail.com">digydigy @ gmail.com</a>
         </p>
         <h3>Version Control</h3>
         <p>
