--- a/site/index.html
+++ b/site/index.html
@@ -156,7 +156,8 @@
         <h3>Active Committers</h3>
         <p>
             George Aroush <a href="mailto:george @ aroush.net">george @ aroush.net</a> <br>
-	    Işık YİĞİT (DIGY) <a href="mailto:digydigy @ gmail.com">digydigy @ gmail.com</a>
+	    Işık YİĞİT (DIGY) <a href="mailto:digydigy @ gmail.com">digydigy @ gmail.com</a> <br>
+            Doug Sale <a href="mailto:dougsale @ gmail.com">dougsale @ gmail.com</a> <br>
         </p>
         <h3>Version Control</h3>
         <p>
