Info for 2.3.1 tag added to Main page(index.html)
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@757238 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,9 @@
         </p>
         <h2>News</h2>
         <ul>
+			<li>
+                20 March 2009 - "Tag" Released Lucene.Net 2.3.1 "final" build 003 on SVN.
+            </li>
             <li>
                 13 November 2008 - Accepted, Isik Yigit (aka: "DIGY") and Doug Sale as new committers.
             </li>
