index.html updated (2.3.2 info added)
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@797642 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -52,6 +52,9 @@
         <h2>News</h2>
         <ul>
 			<li>
+                24 July 2009 - "Tag" Released Lucene.Net 2.3.2 "final" build 001 on SVN.
+            </li>
+			<li>
                 20 March 2009 - "Tag" Released Lucene.Net 2.3.1 "final" build 003 on SVN.
             </li>
             <li>
@@ -159,7 +162,7 @@
         <h3>Active Committers</h3>
         <p>
             George Aroush <a href="mailto:george @ aroush.net">george @ aroush.net</a> <br>
-	    Işık YİĞİT (DIGY) <a href="mailto:digydigy @ gmail.com">digydigy @ gmail.com</a> <br>
+			Işık YİĞİT (DIGY) <a href="mailto:digydigy @ gmail.com">digydigy @ gmail.com</a> <br>
             Doug Sale <a href="mailto:dougsale @ gmail.com">dougsale @ gmail.com</a> <br>
         </p>
         <h3>Version Control</h3>
