changed my email from gmail to myspace
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@809733 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -163,7 +163,7 @@
         <p>
             George Aroush <a href="mailto:george @ aroush.net">george @ aroush.net</a> <br>
 			Işık YİĞİT (DIGY) <a href="mailto:digydigy @ gmail.com">digydigy @ gmail.com</a> <br>
-            Doug Sale <a href="mailto:dougsale @ gmail.com">dougsale @ gmail.com</a> <br>
+            Doug Sale <a href="mailto:dsale @ myspace.com">dsale @ myspace.com</a> <br>
         </p>
         <h3>Version Control</h3>
         <p>
