fixed mailing list links - should be '@' (with whitespace), not 'at'
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@809739 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -179,12 +179,12 @@
         </p>
         <p>
             For general usage, discussion about the project occurs on its mailing list, <a href="mailto:lucene-net-user @ incubator.apache.org">
-                lucene-net-user @ incubator.apache.org</a>, to subscribe, send a message to <a href="mailto:lucene-net-user-subscribe at incubator.apache.org">
+                lucene-net-user @ incubator.apache.org</a>, to subscribe, send a message to <a href="mailto:lucene-net-user-subscribe @ incubator.apache.org">
                 lucene-net-user-subscribe @ incubator.apache.org</a>.
         </p>
         <p>
             Commit notifications are sent to <a href="mailto:lucene-net-commits @ incubator.apache.org">
-                lucene-net-commits @ incubator.apache.org</a>, to subscribe send a message to <a href="mailto:lucene-net-commits-subscribe at incubator.apache.org">
+                lucene-net-commits @ incubator.apache.org</a>, to subscribe send a message to <a href="mailto:lucene-net-commits-subscribe @ incubator.apache.org">
                 lucene-net-commits-subscribe @ incubator.apache.org</a>.
         </p>
         <p>
