Updated Lucene.Net main page
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@829694 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/index.html
+++ b/site/index.html
@@ -52,6 +52,12 @@
         <h2>News</h2>
         <ul>
 			<li>
+                20 October 2009 - Apache Lucene.Net passed graduation vote as a subproject under Apache Lucene.
+            </li>
+			<li>
+                19 August 2009 - "Tag" Released Lucene.Net 2.4.0 "final" build 002 on SVN.
+            </li>
+			<li>
                 24 July 2009 - "Tag" Released Lucene.Net 2.3.2 "final" build 001 on SVN.
             </li>
 			<li>
